fixed create build weapon and artifact menu misalignment

--- a/Client/src/css/artifactcard.css
+++ b/Client/src/css/artifactcard.css
@@ -126,3 +126,21 @@ body {
   text-align: center;
   inline-size: 100px;
 }
+
+@media only screen and (max-width: 990px) {
+  .artifact-menu {
+    border: 0px solid;
+    border-radius: 10px;
+    background-color: #2b1766;
+    width: 710px;
+    height: 412px;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    margin-top: -50px;
+    margin-bottom: 45px;
+    margin-right: 0px;
+    overflow: auto;
+    gap: 25px;
+  }
+}
