--- a/Client/src/css/weaponcard.css
+++ b/Client/src/css/weaponcard.css
@@ -107,3 +107,21 @@ body {
   inline-size: 100px;
   margin-bottom: 20px;
 }
+
+@media only screen and (max-width: 990px) {
+  .weapon-menu {
+    border: 0px solid;
+    border-radius: 10px;
+    background-color: #2b1766;
+    width: 710px;
+    height: 412px;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    margin-top: -50px;
+    margin-bottom: 45px;
+    margin-right: -2px;
+    overflow: auto;
+    gap: 10px 4px;
+  }
+}
